--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700italic,700,400italic|PT+Serif:400,700,400italic,700italic|Vollkorn|Rokkitt:400,700' rel='stylesheet' type='text/css'>
 
   
-  <link rel='stylesheet prefetch' href='http://cadice.b1.jcink.com/uploads/cadice/Style_My_Tooltips/style_my_tooltips.css'>
 <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css'>
 
       <link rel="stylesheet" href="css/style.css">
@@ -55,7 +54,7 @@ $(document).ready(function(){
   </script></code></pre>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js'></script>
-<script src='http://cadice.b1.jcink.com/uploads/cadice/slideToggleExtended_min.js'></script>
+<script src='/slideToggleExtended_min.js'></script>
 
     <script src="js/index.js"></script>
 
