quick update of js link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ $(document).ready(function(){
   </script></code></pre>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js'></script>
-<script src='/slideToggleExtended_min.js'></script>
+<script src='/sideToggleExtended.js'></script>
 
     <script src="js/index.js"></script>
 
